welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: not found: value EstFaceMur
if (EstFaceMur():Boolean) {
    ^Program:4: error: not found: value avence
    avence();
    ^