welcome.lessons.welcome.conditions.Conditions.scala.code
if (EstFaceMur():Boolean) {
    recule();
} else {
    avence();
}